--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -102,8 +102,7 @@
         android:layout_marginStart="80dp"
         android:layout_marginTop="30dp"
         android:text="LOGIN"
-        android:textColor="@color/white"
-        />
+        android:textColor="@color/white" />
 
     <TextView
         android:id="@+id/register"
