--- a/app/src/main/res/drawable/cardview.xml
+++ b/app/src/main/res/drawable/cardview.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#9FDFE3" />
-    <corners
-        android:radius="60dp">
-    </corners>
+    <gradient android:startColor="#388a8d"
+        android:centerColor="@color/buttontext"
+        android:endColor="#50C2C9">
+    </gradient>
+
 </shape>
