--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -30,17 +30,17 @@
                 android:id="@+id/boxfullname"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="65dp"
                 android:layout_below="@+id/imageregister"
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="40dp"
                 android:layout_marginEnd="40dp"
                 android:hint="Full Name"
                 android:textColorHint="@color/buttontext"
-                app:boxCornerRadiusBottomEnd="10dp"
-                app:boxCornerRadiusBottomStart="10dp"
-                app:boxCornerRadiusTopEnd="10dp"
-                app:boxCornerRadiusTopStart="10dp"
+                app:boxCornerRadiusBottomEnd="30dp"
+                app:boxCornerRadiusBottomStart="30dp"
+                app:boxCornerRadiusTopEnd="30dp"
+                app:boxCornerRadiusTopStart="30dp"
                 app:boxStrokeColor="@color/buttontext"
                 app:endIconDrawable="@drawable/outline_close_24"
                 app:endIconMode="clear_text"
@@ -50,7 +50,7 @@
                 app:startIconTint="@color/buttontext">
 
                 <EditText
-                    android:id="@+id/fullname"
+                    android:id="@+id/nama"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_light"
@@ -65,17 +65,17 @@
                 android:id="@+id/boxusername"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="65dp"
                 android:layout_below="@+id/boxfullname"
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="40dp"
                 android:hint="Username"
                 android:textColorHint="@color/buttontext"
-                app:boxCornerRadiusBottomEnd="10dp"
-                app:boxCornerRadiusBottomStart="10dp"
-                app:boxCornerRadiusTopEnd="10dp"
-                app:boxCornerRadiusTopStart="10dp"
+                app:boxCornerRadiusBottomEnd="30dp"
+                app:boxCornerRadiusBottomStart="30dp"
+                app:boxCornerRadiusTopEnd="30dp"
+                app:boxCornerRadiusTopStart="30dp"
                 app:boxStrokeColor="@color/buttontext"
                 app:endIconDrawable="@drawable/outline_close_24"
                 app:endIconMode="clear_text"
@@ -200,20 +200,11 @@
                     tools:ignore="SpeakableTextPresentCheck"></EditText>
             </com.google.android.material.textfield.TextInputLayout>
 
-            <ProgressBar
-                android:id="@+id/loading"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/boxpassword2"
-                android:layout_centerInParent="true"
-                android:layout_marginTop="15dp"
-                android:backgroundTint="@color/buttontext"
-                android:visibility="gone"></ProgressBar>
-
             <Button
+                android:id="@+id/btnregist"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/loading"
+                android:layout_height="50dp"
+                android:layout_below="@id/boxpassword2"
                 android:layout_centerInParent="true"
                 android:layout_marginTop="20dp"
                 android:fontFamily="@font/poppins_semibold"
