--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -100,17 +100,17 @@
                 android:id="@+id/boxnumber"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="65dp"
                 android:layout_below="@+id/boxusername"
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="40dp"
                 android:hint="Phone Number"
                 android:textColorHint="@color/buttontext"
-                app:boxCornerRadiusBottomEnd="10dp"
-                app:boxCornerRadiusBottomStart="10dp"
-                app:boxCornerRadiusTopEnd="10dp"
-                app:boxCornerRadiusTopStart="10dp"
+                app:boxCornerRadiusBottomEnd="30dp"
+                app:boxCornerRadiusBottomStart="30dp"
+                app:boxCornerRadiusTopEnd="30dp"
+                app:boxCornerRadiusTopStart="30dp"
                 app:boxStrokeColor="@color/buttontext"
                 app:endIconDrawable="@drawable/outline_close_24"
                 app:endIconMode="clear_text"
@@ -143,10 +143,10 @@
                 android:layout_marginEnd="40dp"
                 android:hint="Password"
                 android:textColorHint="@color/buttontext"
-                app:boxCornerRadiusBottomEnd="10dp"
-                app:boxCornerRadiusBottomStart="10dp"
-                app:boxCornerRadiusTopEnd="10dp"
-                app:boxCornerRadiusTopStart="10dp"
+                app:boxCornerRadiusBottomEnd="30dp"
+                app:boxCornerRadiusBottomStart="30dp"
+                app:boxCornerRadiusTopEnd="30dp"
+                app:boxCornerRadiusTopStart="30dp"
                 app:boxStrokeColor="@color/buttontext"
                 app:helperText="Required"
                 app:helperTextTextColor="@color/buttontext"
@@ -177,10 +177,10 @@
                 android:layout_marginEnd="40dp"
                 android:hint="Confirm Password"
                 android:textColorHint="@color/buttontext"
-                app:boxCornerRadiusBottomEnd="10dp"
-                app:boxCornerRadiusBottomStart="10dp"
-                app:boxCornerRadiusTopEnd="10dp"
-                app:boxCornerRadiusTopStart="10dp"
+                app:boxCornerRadiusBottomEnd="30dp"
+                app:boxCornerRadiusBottomStart="30dp"
+                app:boxCornerRadiusTopEnd="30dp"
+                app:boxCornerRadiusTopStart="30dp"
                 app:boxStrokeColor="@color/buttontext"
                 app:helperText="Required"
                 app:helperTextTextColor="@color/buttontext"
