--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -103,7 +103,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:fontFamily="@font/poppins_semibold"
-                android:text="Your Balance"
+                android:text="Tabungan Anda"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="10sp">
