menambah fitur max penraikan pada pengajuan penarikan dan format rupiah

--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/active"
     android:backgroundTint="@color/white"
-    tools:context=".HistoryActivity">
+    tools:context=".Activty.HistoryActivity">
 
     <Spinner
         android:id="@+id/spinner_year"
