--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg"
     android:orientation="vertical"
-    tools:context=".HomeActivity">
+    tools:context=".Activty.HomeActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -159,8 +159,8 @@
 
                     <ImageView
                         android:id="@+id/history"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
+                        android:layout_width="37dp"
+                        android:layout_height="32dp"
                         android:layout_marginStart="20dp"
                         android:layout_marginTop="20dp"
                         android:src="@drawable/verif"></ImageView>
